<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stickerview.EditActivity">

    <Button
        android:id="@+id/cropBtn"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="192dp"
        android:text="@string/crop_picture"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stonksBtn"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="287dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="192dp"
        android:text="Stonks"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/textStickerBtn"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="192dp"
        android:text="@string/text"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/captionBtn"
        android:layout_width="375dp"
        android:layout_height="44dp"
        android:layout_marginTop="558dp"
        android:layout_marginBottom="129dp"
        android:text="@string/add_caption"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stonksBtn"
        app:layout_constraintStart_toStartOf="@+id/cropBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/captionOffBtn"
        android:layout_width="375dp"
        android:layout_height="44dp"
        android:layout_marginTop="558dp"
        android:layout_marginBottom="129dp"
        android:text="@string/remove_caption"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stonksBtn"
        app:layout_constraintStart_toStartOf="@+id/cropBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="75dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="75dp"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="62dp"
        android:layout_height="48dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="370dp"
        android:layout_marginBottom="75dp"
        android:text="←"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/canvas"
        android:layout_width="361dp"
        android:layout_height="361dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564">

        <ImageView
            android:id="@+id/editPresetEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/select"
            android:layout_gravity="bottom"/>

        <View
            android:id="@+id/caption"
            style="@style/Divider"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="top">


        </View>




    </FrameLayout>

    <ImageView
        android:id="@+id/stonks"
        android:layout_width="108dp"
        android:layout_height="122dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="237dp"
        android:layout_marginBottom="678dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stonks_best" />

</androidx.constraintlayout.widget.ConstraintLayout>